--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,28 @@
   text-align: center;
 }
 
+.card {
+  border: 1px solid black;
+  padding: 25px;
+}
+
+.input-comp {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 50px;
+    max-width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+.phone {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
