--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,22 @@
   pointer-events: none;
 }
 
+.card {
+  border: 1px solid black;
+  padding: 25px;
+}
+
+nav {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 50px;
+    max-width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
